[package]
name = "digital-twin-proxy"
description = "Turn web browsing into personal memory for AI agents"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "digital-twin-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
clap = { version = "4.5.47", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
reqwest = { version = "0.12.23", features = ["json"] }
directories = "6.0.0"
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.99"
async-openai = "0.30.0"
scraper = "0.24.0"
dotenvy = "0.15.7"

[lints.rust]
unsafe_code = "warn"
missing_docs = "allow"

[lints.clippy]
# Pedantic lints
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Error handling
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
unwrap_in_result = "warn"

# Performance
inefficient_to_string = "warn"
unnecessary_wraps = "warn"
needless_pass_by_value = "warn"
trivially_copy_pass_by_ref = "warn"
clone_on_ref_ptr = "warn"

# Style and maintainability
cognitive_complexity = "warn"
too_many_arguments = "warn"
too_many_lines = "warn"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

# Specific allowances for this project
print_stdout = "allow"
print_stderr = "allow"
use_self = "allow"
